# allegro-gpu-rendering

./: .gitignore  CMakeLists.txt  README.md  cpu.cpp  cpu.hpp  glider-gun.txt  kernel.cu  kernel.cuh  main.cpp  main_cpu.cpp  max.txt  puffer_train.txt  spaceship.txt  state.txt
